--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
-NEXT_PUBLIC_API_URLA=https://shop.lcb168.shop/
+NEXT_PUBLIC_API_URLA=https://www.ophonehub.com/
 
 
 
 #  -------- แท็ก Google ------------
 
-NEXT_PUBLIC_GOOGLE_TAG_MANAGER_ID=AW-16868993640
+NEXT_PUBLIC_GOOGLE_TAG_MANAGER_ID=
